<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="182dp"
        android:background="@android:color/darker_gray"
        android:gravity="center">

        <ImageButton
            android:contentDescription="@string/preview"
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@mipmap/ic_backward" />

        <ImageButton
            android:contentDescription="@string/rewind"
            android:id="@+id/rewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@mipmap/ic_backward" />

        <ImageButton
            android:contentDescription="@string/play"
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@mipmap/ic_play" />

        <ImageButton
            android:contentDescription="@string/forward"
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/btn_forward" />

        <ImageButton
            android:contentDescription="@string/next"
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@mipmap/ic_forward" />

    </LinearLayout>

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />


    <ImageView
        android:contentDescription="@string/songImage"
        android:id="@+id/songImage"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@+id/songTitle"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_play" />

    <LinearLayout
        android:id="@+id/timerDisplay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/songImage"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" >

        <TextView
            android:id="@+id/songCurrentDurationLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textColor="@color/darkgreen"
            android:text="@string/start"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/songRemainingDurationLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/red"
            android:text="@string/end"
            android:textStyle="bold" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/songProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/timerDisplay"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentStart="true" />

</RelativeLayout>