<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_player">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/album_image"/>


    <ImageView
        android:id="@+id/album_image"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="-1dp"
        android:contentDescription="@string/albumart"
        android:src="@mipmap/ic_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <SeekBar

        android:id="@+id/songProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:max="100"
        android:outlineAmbientShadowColor="@drawable/bg_color_footer"
        android:progress="0"
        android:progressDrawable="@drawable/seekbar"
        android:thumb="@drawable/ic_seekbar_ampelmann"
        android:thumbTintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album_image" />


    <TextView
        android:id="@+id/songCurrentDurationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:text="@string/start"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@id/songProgressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/album_image"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/btn_shuffle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/shuffle"
        android:src="@drawable/ic_shuffle"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/songProgressBar"
        app:layout_constraintStart_toEndOf="@+id/songCurrentDurationLabel"
        app:layout_constraintTop_toBottomOf="@+id/album_image"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/btn_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/repeat"
        android:src="@drawable/ic_repeat"
        app:layout_constraintBottom_toTopOf="@+id/songProgressBar"
        app:layout_constraintEnd_toStartOf="@+id/songRemainingDurationLabel"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toEndOf="@+id/btn_shuffle"
        app:layout_constraintTop_toBottomOf="@+id/album_image"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/songRemainingDurationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="end"
        android:text="@string/end"
        android:textColor="@color/darkgreen"
        app:layout_constraintBottom_toTopOf="@id/songProgressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/songCurrentDurationLabel"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/songTitle"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="marquee"
        android:fontFamily=""
        android:gravity="start"
        android:marqueeRepeatLimit="marquee_forever"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/rauch_haus_song"
        android:textColor="@color/colorPrimary"
        android:textIsSelectable="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songProgressBar" />


    <TextView
        android:id="@+id/songArtist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:singleLine="true"
        android:fontFamily=""
        android:gravity="start"
        android:layoutDirection="ltr"
        android:ellipsize="marquee"
        android:textIsSelectable="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/rio_reiser"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songTitle" />

    <RelativeLayout
        android:id="@+id/LinLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@drawable/bg_color_footer"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/songArtist">


        <ImageView
            android:layout_width="42dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_gravity="bottom"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/funkturm"
            android:foregroundGravity="bottom"
            android:layout_marginTop="10dp"
            android:paddingTop="25dp"
            android:scaleType="fitXY"
            android:src="@drawable/funkturm"  />


        <ImageView
            android:id="@+id/rewind"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginStart="54dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="22dp"
            android:contentDescription="@string/rewind"
            android:src="@mipmap/ic_backward"
            android:text="@string/rewind" />

        <ImageView
            android:contentDescription="@string/play"
            android:id="@+id/play"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_play"
            android:visibility="visible" />

        <ImageView
            android:contentDescription="@string/pause"
            android:id="@+id/pause"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:src="@mipmap/ic_pause"
            android:visibility="gone"
            android:layout_centerInParent="true"/>

        <ImageView
            android:id="@+id/forward"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:layout_marginStart="41dp"
            android:layout_marginEnd="54dp"
            android:contentDescription="@string/forward"
            android:src="@mipmap/ic_forward"
            android:layout_centerVertical="true"/>


        <ImageView
            android:layout_width="50dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom"
            android:layout_marginEnd="0dp"
            android:contentDescription="@string/fernsehturm"
            android:foregroundGravity="bottom"
            android:gravity="bottom"
            android:paddingTop="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_fernsehturm" />



    </RelativeLayout>
</android.support.constraint.ConstraintLayout>