<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".activities.PlaylistActivity"
    android:background="@drawable/list_selector">
    


    <ImageView
        android:contentDescription="@string/albumart"
        android:id="@+id/songThumbNail"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:maxWidth="16dp"
        android:maxHeight="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_purple_note"
        />



    <TextView
        android:id="@+id/songlist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/songThumbNail"
        android:layout_toEndOf="@id/songThumbNail"
        android:text="@string/song_name"
        android:padding="3dp"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/songArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/songThumbNail"
        android:layout_alignLeft="@+id/songlist"
        android:layout_below="@id/songlist"
        android:text="@string/songartist"
        android:textSize="12sp"
        android:layout_alignStart="@+id/songlist" />

    <!--<TextView
        android:id="@+id/songArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/songlist"
        android:gravity="center"
        android:text="@string/song_name"
        android:padding="20dp"
         />-->



</RelativeLayout>